<?xml version="1.0"?>
<package format="2">
  <name>mower_aruco</name>
  <version>0.0.1</version>
  <description>detect ArUco markers using ROS and OpenCV.</description>

  <maintainer email="lguitech@126.com">Brook Li</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  
  <build_depend>libopencv-dev</build_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <export>
  
  </export>
</package>
