<?xml version="1.0"?>
<package format="2">
  <name>mower_comm</name>
  <version>0.0.0</version>
  <description>The mower_comm package</description>

  <author email="brookli@micronavi.cn">Brook Li</author>
  <maintainer email="brookli@micronavi.cn">Brook Li</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lmower_comm"/>
  </export>
</package>
