<?xml version="1.0"?>
<package format="2">
  <name>mower_simu</name>
  <version>0.0.0</version>
  <description>The mower_simu package</description>

  <author email="lguitech@126.com">brookli</author>
  <maintainer email="lguitech@126.com">brookli</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>



  <export>
  </export>
</package>
